# platform.adaptation.system-plugin

./: Makefile.am  autogen.sh  configure.ac
etc/: fstab  fstab_initrd
packaging/: system-plugin.spec
rules/: 51-system-plugin-exynos.rules  51-system-plugin-spreadtrum.rules
scripts/: tizen-fstrim-on-charge.sh
src/liblazymount/: lazy_mount.h  lazy_mount_interface.c  liblazymount.pc.in  test_lazymount.c
units/: csa.mount  lazy_mount.path  lazy_mount.service  resize2fs@.service  tizen-fstrim-user.service  tizen-fstrim-user.timer  tizen-system-env.service  umount-opt.service
